--- a/doc/modules/ROOT/pages/index.adoc
+++ b/doc/modules/ROOT/pages/index.adoc
@@ -1,13 +1,6 @@
-:github-address: https://github.com/hazelcast-guides/terraform-quickstarts
+:github-address: https://github.com/hazelcast-guides/openfaas-hz-client
 
-:templates-url: https://raw.githubusercontent.com/hazelcast-guides/adoc-templates/master
-
-// Use this relative url if you are going to publish the guide on the guides site.
-// Note that this url will not work locally and raise asciidoctor errors.
-// So, complete the guide with the above url and set the below one just before 
-// publishing on the guides site.
-//
-//:templates-url: templates:ROOT:page$/
+:templates-url: templates:ROOT:page$/
 
 = Use Hazelcast with OpenFaaS
 
